@@ -1,0 +1,188 @@
+;----------------------------------------------------
+;   SAPKRB16.DEF - KRB5.DLL module definition file
+;----------------------------------------------------
+
+LIBRARY		SAPKRB16
+DESCRIPTION	'DLL for Kerberos 5'
+EXETYPE		WINDOWS
+CODE		PRELOAD MOVEABLE DISCARDABLE
+DATA		PRELOAD MOVEABLE SINGLE
+HEAPSIZE	8192
+
+EXPORTS
+	WEP					@1001 RESIDENTNAME
+	LibMain					@1002
+; Kerberos 5
+	_krb5_build_principal
+	_krb5_build_principal_ext
+	krb5_copy_addr
+	krb5_copy_addresses
+	krb5_copy_authdata
+	krb5_copy_authenticator
+	krb5_copy_checksum
+	krb5_copy_creds
+	krb5_copy_data
+	krb5_copy_keyblock
+	krb5_copy_keyblock_contents
+	krb5_copy_principal
+	krb5_copy_ticket
+	krb5_decrypt_tkt_part
+	krb5_free_address
+	krb5_free_addresses
+	krb5_free_ap_rep
+	krb5_free_ap_rep_enc_part
+	krb5_free_ap_req
+	krb5_free_authdata
+	krb5_free_authenticator
+	krb5_free_authenticator_contents
+	krb5_free_checksum
+	krb5_free_context
+	krb5_free_cred
+	krb5_free_cred_contents
+	krb5_free_cred_enc_part
+	krb5_free_creds
+	krb5_free_data
+	krb5_free_data_contents
+	krb5_free_enc_kdc_rep_part
+	krb5_free_enc_tkt_part
+	krb5_free_error
+	krb5_free_host_realm
+	krb5_free_kdc_rep
+	krb5_free_kdc_req
+	krb5_free_keyblock
+	krb5_free_keyblock_contents
+	krb5_free_last_req
+	krb5_free_pa_data
+	krb5_free_principal
+	krb5_free_priv
+	krb5_free_priv_enc_part
+	krb5_free_pwd_data
+	krb5_free_pwd_sequences
+	krb5_free_safe
+	krb5_free_tgt_creds
+	krb5_free_ticket
+	krb5_free_tickets
+	krb5_free_tkt_authent
+	krb5_fwd_tgt_creds
+	krb5_get_credentials
+	krb5_get_credentials_renew
+	krb5_get_credentials_validate
+	krb5_get_default_realm
+	krb5_get_host_realm
+	krb5_get_in_tkt
+	krb5_get_in_tkt_with_keytab
+	krb5_get_in_tkt_with_password
+	krb5_get_in_tkt_with_skey
+	krb5_get_notification_message
+	krb5_init_context
+	krb5_mk_error
+	krb5_mk_priv
+	krb5_mk_rep
+	krb5_mk_req
+	krb5_mk_req_extended
+	krb5_mk_safe
+	krb5_os_localaddr
+	krb5_parse_name
+	krb5_principal_compare
+	krb5_rd_cred
+	krb5_rd_error
+	krb5_rd_priv
+	krb5_rd_rep
+	krb5_rd_req
+	krb5_rd_safe
+	krb5_read_password
+	krb5_recvauth
+	krb5_sendauth
+	krb5_sname_to_principal
+	krb5_timeofday
+	krb5_unparse_name
+	krb5_unparse_name_ext
+	krb5_us_timeofday
+;
+	krb5_use_enctype
+	krb5_checksum_size
+	krb5_encrypt_size
+	krb5_calculate_checksum
+	krb5_verify_checksum
+	krb5_eblock_enctype
+;
+	krb5_decrypt
+	krb5_encrypt
+	krb5_string_to_key
+	krb5_process_key
+	krb5_finish_key
+	krb5_init_random_key
+	krb5_finish_random_key
+	krb5_random_key
+;
+	krb5_425_conv_principal
+	krb5_524_conv_principal
+;
+	krb5_cksumtype_to_string
+	krb5_deltat_to_string
+	krb5_enctype_to_string
+	krb5_salttype_to_string
+	krb5_string_to_cksumtype
+	krb5_string_to_deltat
+	krb5_string_to_enctype
+	krb5_string_to_salttype
+	krb5_string_to_timestamp
+	krb5_timestamp_to_sfstring
+	krb5_timestamp_to_string
+;
+	krb5_auth_con_free
+	krb5_auth_con_genaddrs
+	krb5_auth_con_getflags
+	krb5_auth_con_getkey
+	krb5_auth_con_getlocalsubkey
+	krb5_auth_con_getremotesubkey
+	krb5_auth_con_init
+	krb5_auth_con_setflags
+	krb5_auth_con_getlocalseqnumber
+	krb5_auth_con_getremoteseqnumber
+	krb5_auth_con_setuseruserkey
+	krb5_auth_con_getauthenticator
+	krb5_auth_con_set_req_cksumtype
+;
+	krb5_cc_default
+	krb5_cc_register
+	krb5_cc_resolve
+;
+	krb5_kt_default
+	krb5_kt_register
+	krb5_kt_resolve
+	krb5_kt_add_entry
+	krb5_kt_free_entry
+	krb5_kt_read_service_key
+	krb5_kt_remove_entry
+;Kadm routines
+	krb5_adm_connect
+	krb5_adm_disconnect
+	krb5_free_adm_data
+	krb5_read_adm_reply
+	krb5_send_adm_cmd
+;
+;Temporary exports (DO NOT USE)
+	_sscanf
+	_decode_krb5_ticket
+	des_ecb_encrypt
+	des_new_random_key
+	des_key_sched
+	des_pcbc_encrypt
+	des_quad_cksum
+	des_string_to_key
+	des_set_random_generator_seed
+	profile_get_values
+	krb5_random_confounder
+	krb5_size_opaque
+	krb5_internalize_opaque
+	krb5_externalize_opaque
+	krb5_ser_pack_int32
+	krb5_ser_unpack_int32
+	krb5_ser_pack_bytes
+	krb5_ser_unpack_bytes
+	krb5_ser_auth_context_init
+	krb5_ser_context_init
+	krb5_ser_ccache_init
+	krb5_ser_keytab_init
+	krb5_ser_rcache_init
